Fixes wrapping issues with selectObjectId when it's within a repeatable.

--- a/tool-ui/src/main/webapp/style/cms.less
+++ b/tool-ui/src/main/webapp/style/cms.less
@@ -1857,7 +1857,8 @@ table.links {
 .selectObjectId {
     .select;
 
-    width: 50%;
+    white-space: normal;
+    width: 30%;
 }
 
 .editObjectId {
